Fix margin at top of homepage to remove white space and to add padding to logo

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -21,8 +21,8 @@ body {
     margin-left: 20px;
 }
 
-#logo {
-    margin-top: 20px;
+#image-div {
+    padding: 20px;
 }
 
 header a {
